--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "arthurprnt",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^22.9.0"
+    "canvas": "^2.11.2",
+    "puppeteer": "^22.9.0",
+    "twitter-api-v2": "^1.17.0"
   }
 }
