--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: 18
       - run:
-          npm ci
+          npm i
           node ${{ github.action_path }}/index.js
   
