--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 18
       - run:
-          npm i
-          node index.js
+        npm i
+      - run:
+        node index.js
   
