--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run:
-        npm i
-      - run:
-        node index.js
+      - run: npm i
+      - run: node index.js
   
