--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: cd ${{ github.action_path }}/
-      - run: ls
-      - run: npm i
-      - run: node index.js
+      - run: cd ${{ github.action_path }}
+      - run: ls -R
