--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Run Code
-        env:
+      - env:
           appKey: ${{ secrets.APPKEY }}
           appSecret: ${{ secrets.APPSECRET }}
           accessToken: ${{ secrets.ACCESSTOKENT }}
